--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+# application.properties
 spring.application.name=task_pathfinder_web
+
+# MySQL connection settings
+spring.datasource.url=jdbc:mysql://localhost:3306/task_pathfinder
+spring.datasource.username=root
+spring.datasource.password=rootpass
+
+# JDBC driver class for MySQL
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
